--- a/Content.Client/_RMC14/Xenonids/UI/XenoChoiceControl.xaml
+++ b/Content.Client/_RMC14/Xenonids/UI/XenoChoiceControl.xaml
@@ -1,17 +1,25 @@
 ﻿<ui:XenoChoiceControl
     xmlns="https://spacestation14.io"
-    xmlns:ui="clr-namespace:Content.Client._RMC14.Xenonids.UI">
-    <BoxContainer Orientation="Horizontal">
-        <Button Name="Button" Access="Public"
-                HorizontalExpand="True" VerticalExpand="False"
-                StyleClasses="ButtonSquare" Margin="0">
-            <BoxContainer Orientation="Horizontal" Margin="0">
-                <TextureRect Name="Texture" Access="Public"
-                             HorizontalExpand="False" VerticalExpand="False"
-                             Margin="1"/>
-                <Control MinWidth="5"/>
-                <RichTextLabel Name="NameLabel" Access="Public" VerticalAlignment="Center"/>
-            </BoxContainer>
-        </Button>
+    xmlns:ui="clr-namespace:Content.Client._RMC14.Xenonids.UI"
+    xmlns:style="clr-namespace:Content.Client.Stylesheets">
+
+
+    <BoxContainer Orientation="Vertical">
+        <BoxContainer Orientation="Horizontal">
+            <Button Name="Button" Access="Public"
+                    HorizontalExpand="True" VerticalExpand="False"
+                    StyleClasses="ButtonSquare" Margin="0">
+                <BoxContainer Orientation="Horizontal" Margin="0">
+                    <RichTextLabel Name="EvoPoints" Text="Evo: 234" Access="Public" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" Visible="False"/>
+                    <TextureRect Name="Texture" Access="Public"
+                                 HorizontalExpand="False" VerticalExpand="False"
+                                 Margin="1"/>
+                    <Control MinWidth="5"/>
+                    <RichTextLabel Name="NameLabel" Access="Public" VerticalAlignment="Center"/>
+                </BoxContainer>
+            </Button>
+        </BoxContainer>
+        <ProgressBar Access="Public" Visible="False" Name="Health" MinValue="0" MaxValue="1" SetHeight="5" Value="0.5"/>
+        <ProgressBar Access="Public" Visible="False" Name="Plasma" MinValue="0" MaxValue="1" SetHeight="5" Value="0.2"/>
     </BoxContainer>
 </ui:XenoChoiceControl>
