--- a/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
+++ b/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
@@ -3,8 +3,42 @@
     xmlns:cc="clr-namespace:Content.Client._RMC14.Xenonids.Watch"
     Title="{Loc cm-xeno-watch}"
     MinSize="300 400">
-    <BoxContainer Orientation="Vertical">
-        <Label Name="BurrowedLarvaLabel" Access="Public" Text="Burrowed Larva: 0" />
+    <BoxContainer Orientation="Vertical" Margin="2 0 2 4">
+            <Collapsible Margin="0 0 0 0 ">
+                <CollapsibleHeading>
+                    <Label Name="Collapsabletop" Text="Info" Margin="20 0 0 0"/>
+                </CollapsibleHeading>
+                <CollapsibleBody Margin="20 0 0 0">
+                        <BoxContainer Orientation="Vertical">
+                            <BoxContainer Name="Info" Orientation="Horizontal"  VerticalAlignment="Center" HorizontalAlignment="Center">
+                            <GridContainer Rows="3" VSeparationOverride="10" Margin="10 5 0 0">
+                                <BoxContainer>
+                                    <Label Name="Tier3Label" Access="Public" Text="Tier 3 count: 33" />
+                                </BoxContainer>
+                                <BoxContainer>
+                                    <Label Name="Tier2Label" Access="Public" Text="Tier 2 count: 12" />
+                                </BoxContainer>
+                                <BoxContainer>
+                                    <Label Name="Tier1Label" Access="Public" Text="Tier 1 count: 54" />
+                                </BoxContainer>
+                            </GridContainer>
+                            <GridContainer Rows="3" VSeparationOverride="10" Margin="30 5 0 0">
+                                <BoxContainer>
+                                    <Label Name="Tier3SlotsLabel" Access="Public" Text="Tier 3 slots: 0" />
+                                </BoxContainer>
+                                <BoxContainer>
+                                    <Label Name="Tier2SlotsLabel" Access="Public" Text="Tier 2 slots: 33" />
+                                </BoxContainer>
+                                <BoxContainer>
+                                    <Label Name="XenoCountLabel" Access="Public" Text="Xeno count: 1" />
+                                </BoxContainer>
+                            </GridContainer>
+                        </BoxContainer>
+                        <Label Name="BurrowedLarvaLabel" Access="Public" Text="Burrowed Larva: 0" />
+                        </BoxContainer>
+        </CollapsibleBody>
+        </Collapsible>
+
         <TabContainer>
         <BoxContainer Name="Tiers" Orientation="Horizontal">
             <Button Name="Tier4" Text="Tier 4" ToggleMode="True" Access="Public"/>
@@ -18,28 +52,31 @@
                     <Button Name="Queen" Text="Queen" ToggleMode="True" Access="Public"/>
                 </BoxContainer>
                 <BoxContainer>
-                <Button Name="Ravager" Text="Ravager" ToggleMode="True" Access="Public"/>
-                <Button Name="Boiler" Text="Boiler" ToggleMode="True" Access="Public"/>
-                <Button Name="Praetorian" Text="Praetorian" ToggleMode="True" Access="Public"/>
-                <Button Name="Crusher" Text="Crusher" ToggleMode="True" Access="Public"/>
+                <Button Name="Ravager" Text="Ravager: 0" ToggleMode="True" Access="Public"/>
+                <Button Name="Boiler" Text="Boiler: 0" ToggleMode="True" Access="Public"/>
+                <Button Name="Praetorian" Text="Praetorian: 0" ToggleMode="True" Access="Public"/>
+                <Button Name="Crusher" Text="Crusher: 0" ToggleMode="True" Access="Public"/>
                 </BoxContainer>
                 <BoxContainer>
-                    <Button Name="Spitter" Text="Spitter" ToggleMode="True" Access="Public"/>
-                    <Button Name="Warrior" Text="Warrior" ToggleMode="True" Access="Public"/>
-                    <Button Name="Lurker" Text="Lurker" ToggleMode="True" Access="Public"/>
-                    <Button Name="Hivelord" Text="Hivelord" ToggleMode="True" Access="Public"/>
-                    <Button Name="Carrier" Text="Carrier" ToggleMode="True" Access="Public"/>
-                    <Button Name="Burrower" Text="Burrower" ToggleMode="True" Access="Public"/>
+                    <Button Name="Spitter" Text="Spitter: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Warrior" Text="Warrior: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Lurker" Text="Lurker: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Hivelord" Text="Hivelord: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Carrier" Text="Carrier: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Burrower" Text="Burrower: 0" ToggleMode="True" Access="Public"/>
                 </BoxContainer>
                 <BoxContainer>
-                    <Button Name="Drone" Text="Drone" ToggleMode="True" Access="Public"/>
-                    <Button Name="Defender" Text="Defender" ToggleMode="True" Access="Public"/>
-                    <Button Name="Sentinel" Text="Sentinel" ToggleMode="True" Access="Public"/>
-                    <Button Name="Runner" Text="Runner" ToggleMode="True" Access="Public"/>
+                    <Button Name="Drone" Text="Drone: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Defender" Text="Defender: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Sentinel" Text="Sentinel: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Runner" Text="Runner: 0" ToggleMode="True" Access="Public"/>
                 </BoxContainer>
                 <BoxContainer>
-                    <Button Name="Parasite" Text="Parasite" ToggleMode="True" Access="Public"/>
-                    <Button Name="Lesser" Text="Lesser Drone" ToggleMode="True" Access="Public"/>
+                    <Button Name="Parasite" Text="Parasite: 0" ToggleMode="True" Access="Public"/>
+                    <Button Name="Lesser" Text="Lesser Drone: 0" ToggleMode="True" Access="Public"/>
+                </BoxContainer>
+                <BoxContainer Orientation="Horizontal" Margin="5 0 0 0">
+                    <CheckBox Name="ShowEvo" Text=" Show Evo"></CheckBox>
                 </BoxContainer>
             </BoxContainer>
         </TabContainer>
