--- a/Content.Client/Lobby/UI/LobbyGui.xaml
+++ b/Content.Client/Lobby/UI/LobbyGui.xaml
@@ -39,7 +39,7 @@
                                         <!-- RMC14 -->
                                         <Button Name="JoinXenoButton" Access="Public"
                                                 Text="{Loc 'rmc-lobby-join-xeno'}"
-                                                StyleClasses="ButtonBig" MinWidth="137" />
+                                                StyleClasses="ButtonBig" MinWidth="137" Visible="False" />
                                         <Button Name="ReadyButton" Access="Public" ToggleMode="True"
                                                 Text="{Loc 'ui-lobby-ready-up-button'}"
                                                 StyleClasses="ButtonBig" MinWidth="137" />
