--- a/Content.Client/_RMC14/NamedItems/NamedItemsPicker.xaml
+++ b/Content.Client/_RMC14/NamedItems/NamedItemsPicker.xaml
@@ -26,5 +26,11 @@
             <Label Text="{Loc 'rmc-ui-named-sentry'}" MinWidth="150" Align="Right" Margin="0 0 5 0" />
             <LineEdit Name="Sentry" Access="Public" HorizontalExpand="True" />
         </BoxContainer>
+        <cc:HSeparator Margin="0 5" />
+        <BoxContainer Orientation="Horizontal">
+            <Label Text="{Loc 'humanoid-profile-editor-enable-auto-name-item'}" Margin="0 0 5 0" />
+            <Control HorizontalExpand="True"/>
+            <Button Name="AutoItemNameButton" Access="Public" Pressed="True" ToggleMode="True" Text="{Loc 'humanoid-profile-editor-enable'}" HorizontalAlignment="Right" />
+        </BoxContainer>
     </BoxContainer>
 </controls:NamedItemsPicker>
