--- a/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
+++ b/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
@@ -4,10 +4,37 @@
     Title="{Loc cm-xeno-watch}"
     MinSize="300 400">
     <BoxContainer Orientation="Vertical">
-        <Label Name="BurrowedLarvaLabel" Access="Public" Text="Burrowed Larva: 0" />
-        <ScrollContainer HScrollEnabled="False" HorizontalExpand="True" VerticalExpand="True">
-            <BoxContainer Orientation="Vertical" Name="XenoContainer" Access="Public" />
-        </ScrollContainer>
-        <LineEdit Name="SearchBar" Access="Public" />
+        <!-- Hive Info -->
+        <Collapsible>
+            <CollapsibleHeading Name="HiveInfo" Title="General Hive Information"/>
+            <CollapsibleBody>
+                <BoxContainer Orientation="Vertical">
+                    <Label Name="XenoCount" Access="Public" Text="Total Sisters: 0" HorizontalAlignment="Center" />
+                    <Label Name="BurrowedLarvaLabel" Access="Public" Text="Burrowed Larva: 0" HorizontalAlignment="Center" />
+                    <Label Name="Evolution" Access="Public" Text="Evolution Rate: 0" HorizontalAlignment="Center" />
+                </BoxContainer>
+            </CollapsibleBody>
+        </Collapsible>
+        <!-- Hive Counts -->
+        <Collapsible>
+            <CollapsibleHeading Name="HiveCounts" Title="Hive Counts"/>
+            <CollapsibleBody>
+                <BoxContainer  Name="RowContainer"  HorizontalAlignment="Center" Orientation="Vertical" Margin="0 0 2 0"/>
+            </CollapsibleBody>
+        </Collapsible>
+        <!-- Xeno List -->
+        <Collapsible BodyVisible="True" VerticalExpand="True">
+            <CollapsibleHeading Name="XenoHive" Title="Hive Xenoid List" Access="Public"/>
+            <CollapsibleBody Name="XenoCollapsableBody" Access="Public" VerticalExpand="True">
+                <BoxContainer Orientation="Vertical" VerticalExpand="True">
+                    <ScrollContainer HScrollEnabled="False" HorizontalExpand="True" VerticalExpand="True">
+                        <BoxContainer Orientation="Vertical" Name="XenoContainer" Access="Public"/>
+                    </ScrollContainer>
+                    <BoxContainer>
+                        <LineEdit Name="SearchBar" Access="Public" HorizontalExpand="True"/>
+                    </BoxContainer>
+                </BoxContainer>
+            </CollapsibleBody>
+        </Collapsible>
     </BoxContainer>
 </cc:XenoWatchWindow>
