--- a/Content.Client/_RMC14/Admin/RMCTransformButton.xaml
+++ b/Content.Client/_RMC14/Admin/RMCTransformButton.xaml
@@ -3,5 +3,5 @@
     xmlns:controls="clr-namespace:Content.Client._RMC14.Admin"
     StyleClasses="ButtonSquare"
     HorizontalExpand="True">
-    <Label Name="TransformName" Access="Public" />
+    <Label Name="TransformName" Access="Public" Align="Center" />
 </controls:RMCTransformButton>
