--- a/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
+++ b/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
@@ -2,7 +2,7 @@
     xmlns="https://spacestation14.io"
     xmlns:cc="clr-namespace:Content.Client._RMC14.Xenonids.Watch"
     Title="{Loc cm-xeno-watch}"
-    MinSize="500 600">
+    MinSize="500 600" SetSize="500 1000">
     <ScrollContainer HScrollEnabled="False" HorizontalExpand="True" VerticalExpand="True">
     <BoxContainer Orientation="Vertical" HorizontalExpand="True">
         <!-- Hive Info -->
@@ -12,7 +12,7 @@
                 <BoxContainer Orientation="Vertical">
                     <Label Name="XenoCount" Access="Public" Text="Total Sisters: 0" HorizontalAlignment="Center" />
                     <Label Name="BurrowedLarvaLabel" Access="Public" Text="Burrowed Larva: 0" HorizontalAlignment="Center" />
-                    <Label Name="Evolution" Access="Public" Text="Evolution Rate: 0" HorizontalAlignment="Center" />
+                    <Label Name="Evolution" Access="Public" Text="Evolution Rate: 0" HorizontalAlignment="Center" Visible="False"/>
                 </BoxContainer>
             </CollapsibleBody>
         </Collapsible>
@@ -24,9 +24,9 @@
             </CollapsibleBody>
         </Collapsible>
         <!-- Xeno List -->
-        <Collapsible BodyVisible="True" VerticalExpand="True">
+        <Collapsible BodyVisible="True" VerticalExpand="True" MinHeight="200">
             <CollapsibleHeading Name="XenoHive" Title="Hive Xenoid List" Access="Public"/>
-            <CollapsibleBody Name="XenoCollapsableBody" Access="Public" VerticalExpand="True">
+            <CollapsibleBody Name="XenoCollapsableBody" Access="Public" VerticalExpand="True" MinHeight="200">
                 <BoxContainer Orientation="Vertical" VerticalExpand="True">
                     <ScrollContainer HScrollEnabled="False" HorizontalExpand="True" VerticalExpand="True">
                         <BoxContainer Orientation="Vertical" Name="XenoContainer" Access="Public"/>
