Work on UI and database
The UI work should hopefully be fine?

The database work is making me cry internally. I have no idea why EF is not working with me.

--- a/Content.Client/Lobby/UI/HumanoidProfileEditor.xaml
+++ b/Content.Client/Lobby/UI/HumanoidProfileEditor.xaml
@@ -65,6 +65,12 @@
                                     <Control HorizontalExpand="True"/>
                                     <OptionButton Name="ArmorPreferenceButton" HorizontalAlignment="Right" />
                                 </BoxContainer>
+                                <!-- Playtime Ranks-->
+                                <BoxContainer HorizontalExpand="True">
+                                    <Label Text="{Loc 'humanoid-profile-editor-preferred-playtime-rank'}" />
+                                    <Control HorizontalExpand="True"/>
+                                    <OptionButton Name="PlaytimeRankButton" HorizontalAlignment="Right"/>
+                                </BoxContainer>
                                 <!-- Playtime Perks -->
                                 <BoxContainer HorizontalExpand="True">
                                     <Label Text="{Loc 'humanoid-profile-editor-enable-playtime-perks'}" />
