Revert "I HAVE NO CLUE HOW AND WHY BUT WATCHWINDOW WAS TURNED INTO CHOICECONTROL?!!"
This reverts commit 1ae4d9b129f5a8296c86be5fe0fb481d3aeef3f6.

--- a/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
+++ b/Content.Client/_RMC14/Xenonids/Watch/XenoWatchWindow.xaml
@@ -1,7 +1,6 @@
-﻿<ui:XenoWatchWindow
+<cc:XenoWatchWindow
     xmlns="https://spacestation14.io"
     xmlns:cc="clr-namespace:Content.Client._RMC14.Xenonids.Watch"
-    xmlns:ui="clr-namespace:Content.Client._RMC14.Xenonids.UI"
     Title="{Loc cm-xeno-watch}"
     MinSize="500 600">
     <ScrollContainer HScrollEnabled="False" HorizontalExpand="True" VerticalExpand="True">
@@ -40,4 +39,4 @@
         </Collapsible>
         </BoxContainer>
         </ScrollContainer>
-</ui:XenoWatchWindow>
+</cc:XenoWatchWindow>
