--- a/Content.Client/_RMC14/Xenonids/UI/XenoChoiceControl.xaml
+++ b/Content.Client/_RMC14/Xenonids/UI/XenoChoiceControl.xaml
@@ -10,16 +10,20 @@
             <Button Name="Button" Access="Public"
                     HorizontalExpand="True" VerticalExpand="False"
                     StyleClasses="ButtonSquare" Margin="0">
-                <BoxContainer Orientation="Horizontal" Margin="0">
+                <BoxContainer Orientation="Horizontal" HorizontalAlignment="Left">
                     <RichTextLabel Name="EvoPoints" Text="Evo: 234" Access="Public" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="5" Visible="False"/>
                     <TextureRect Name="Texture" Access="Public"
                                  HorizontalExpand="False" VerticalExpand="False"
-                                 Margin="1"/>
+                                 Margin="1" VerticalAlignment="Center" />
                     <TextureRect Name="LeaderStar" Access="Public"
                                  HorizontalExpand="False" VerticalExpand="False" VerticalAlignment="Bottom"
                                  Margin="-32 0 0 4" Visible="False"/>
                     <Control MinWidth="5"/>
-                    <RichTextLabel Name="NameLabel" Access="Public" VerticalAlignment="Center"/>
+                    <RichTextLabel Name="NameLabel" Access="Public" VerticalAlignment="Center" SetWidth="190"/>
+                </BoxContainer>
+                <BoxContainer HorizontalAlignment="Right" Orientation="Vertical" Margin="0 5 0 0">
+                    <Button Access="Public" StyleClasses="ButtonSquare" Text="Heal" Name="HealButton"></Button>
+                    <Button Access="Public" StyleClasses="ButtonSquare" Text="Transfer Plasma" Name="PlasmaButton"></Button>
                 </BoxContainer>
             </Button>
         </BoxContainer>
