Make tests happy and change destrain to reset your strain

--- a/Content.Client/_RMC14/Xenonids/Evolution/XenoDevolveWindow.xaml
+++ b/Content.Client/_RMC14/Xenonids/Evolution/XenoDevolveWindow.xaml
@@ -8,7 +8,7 @@
         <BoxContainer Orientation="Vertical">
             <BoxContainer Orientation="Vertical" Name="DevolutionsContainer" Access="Public" />
             <userInterface:BlueHorizontalSeparator Name="Separator" Access="Public" />
-            <Label Name="DestrainLabel" Access="Public" Text="De-Strain:" />
+            <Label Name="DestrainLabel" Access="Public" Text="Reset Strain:" />
             <BoxContainer Orientation="Vertical" Name="DestrainContainer" Access="Public" />
         </BoxContainer>
     </ScrollContainer>
