--- a/Content.Client/_RMC14/Roadmap/RoadmapWindow.xaml
+++ b/Content.Client/_RMC14/Roadmap/RoadmapWindow.xaml
@@ -49,6 +49,7 @@
                     <controls:RoadmapItem ItemState="Partial" HeaderText="Xeno Queen" Text="Head caste of the xenonids" />
                     <controls:RoadmapItem ItemState="Complete" HeaderText="Charger Crusher strain" />
                     <controls:RoadmapItem ItemState="Complete" HeaderText="Berserker Ravager strain" />
+                    <controls:RoadmapItem ItemState="Complete" HeaderText="Tesla ComTech deployable" />
                     <controls:RoadmapItem ItemState="Complete" HeaderText="Praetorian" Text="Tier 3 xeno" />
                     <controls:RoadmapItem ItemState="Complete" HeaderText="Weather" Text="Depends on the planet map: rain on LV, sandstorms on Solaris, etc." />
                     <controls:RoadmapItem ItemState="Complete" HeaderText="Eggsac Carrier strain" />
@@ -88,6 +89,8 @@
                 </BoxContainer>
                 <BoxContainer Name="SecondVersion" Access="Public" Orientation="Vertical"  HorizontalExpand="True" Margin="0 0 20 0">
                     <controls:RoadmapVersionHeader Text="Upcoming" />
+                    <controls:RoadmapItem ItemState="InProgress" HeaderText="Synthetics" />
+                    <controls:RoadmapItem ItemState="InProgress" HeaderText="ARES" Text="Shipside AI with its own room that you need an access ticket to get into." />
                     <controls:RoadmapItem ItemState="InProgress" HeaderText="Emergency response teams" Text="Factions that randomly spawn, are called to the Almayer through a distress signal sent by CIC, or spawned by admins. Each has their own objectives" />
                     <controls:RoadmapItem ItemState="InProgress" HeaderText="Limb damage" Text="Each limb on a marine will be able to take damage separately, being able to detach upon receiving too much damage and requiring individual treatment" />
                     <controls:RoadmapItem ItemState="InProgress" HeaderText="Construction skill" Text="Allows you to build more advanced constructs" />
@@ -109,11 +112,8 @@
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Mounted Weapons" Text="Mounted heavy machine guns are placeable machine guns with a high ammo count, usually placed behind barricades" />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Specialist's Pyrotechnician Kit" Text="Flamethrower with special kinds of fuel." />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Fire missions" Text="A second way for dropships to attack, where instead of shooting directly at a flare or laser they move in a direction away from it and shoot their weapons to each side. This method of attack takes camera offset into account and is much more effective at clearing an area." />
-                    <controls:RoadmapItem ItemState="Planned" HeaderText="Tesla ComTech deployable" />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Plasma and flamethrower sentries" />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Nuke and King endgame" />
-                    <controls:RoadmapItem ItemState="Planned" HeaderText="ARES" Text="Shipside AI with its own room that you need an access ticket to get into." />
-                    <controls:RoadmapItem ItemState="Planned" HeaderText="Synthetics" />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Chemical research" Text="Chemicals with random recipes, ingredients and effects" />
                     <controls:RoadmapItem ItemState="Planned" HeaderText="Ordnance Technician" Text="Shipside role in charge of making custom grenades, claymores, mortar shells, and rockets" />
                 </BoxContainer>
